# fixwise-ai-public

./: .gitignore  README.md  docker-compose.yml  render.yaml  start-gemma.sh  test_support.py
.github/workflows/: ci.yml  warm-backend.yml
.playwright-cli/: page-2026-04-11T18-54-24-200Z.yml  page-2026-04-11T18-54-31-111Z.yml  page-2026-04-11T18-57-00-698Z.yml
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/src/: config.py  main.py  models.py  providers.py  session_manager.py
backend/src/fixwise_backend/: __init__.py  ai.py  app.py  auth.py  config.py  database.py  encryption.py  guidance_modes.py  logging_config.py  models.py  pc_setup_brain.py  pdf_report.py  rate_limit.py  safety.py  security_headers.py  session_manager.py  task_brain.py  tier_enforcement.py  tts.py
backend/src/providers/: __init__.py
backend/src/routes/: __init__.py  http.py  websocket.py
backend/src/services/: __init__.py  guidance.py  safety_filter.py  session_manager.py
backend/src/utils/: __init__.py  config.py
backend/tests/: __init__.py  test_auth.py  test_config.py  test_database.py  test_encryption.py  test_message_validation.py  test_pc_setup_brain.py  test_pdf_report.py  test_provider_selection.py  test_rate_limit.py  test_safety.py  test_security_headers.py  test_session_duration.py  test_session_manager.py  test_support.py  test_task_brain.py  test_tier_enforcement.py  test_tts.py  test_websocket_flow.py
docs/: ARCHITECTURE.md  PRD.md  PRIVATE_BETA_RELEASE.md  ROADMAP.md
ios/FixWise/: project.yml
(+45 files in other folders)
